--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 NetworkedGameplayPPP/.vs/
+NetworkedGameplayPPP/Binaries/
+NetworkedGameplayPPP/Config/
+NetworkedGameplayPPP/Content/
+NetworkedGameplayPPP/DerivedDataCache/
+NetworkedGameplayPPP/Intermediate/
+NetworkedGameplayPPP/Saved/
+NetworkedGameplayPPP/Script/
+NetworkedGameplayPPP.sln
+NetworkedGameplayPPP.uproject
